@@ -1,9 +1,17 @@
 #define DEFAULT_FIFO "/tmp/ghosd-fifo"
 
 #define DEFAULT_BODY_ALIGN "center"
+#define DEFAULT_BODY_COLOR                                                     \
+    {                                                                          \
+        1, 1, 1, 1                                                             \
+    }
 #define DEFAULT_BODY_FONT "monospace 12"
 
 #define DEFAULT_TITLE_ALIGN "center"
+#define DEFAULT_TITLE_COLOR                                                    \
+    {                                                                          \
+        1, 1, 1, 1                                                             \
+    }
 #define DEFAULT_TITLE_FONT "monospace 24"
 
 #define DEFAULT_WINDOW_BG                                                      \
