@@ -54,6 +54,9 @@ Terminates *ghosd*.
 ==== body-align _<align>_
 Sets the alignment of the main body area.
 
+==== body-color _<color>_
+Sets the color of the main body area.
+
 ==== body-font _<font>_
 Sets the font of the main body area.
 
@@ -64,6 +67,9 @@ Sets the text of the main body area.
 
 ==== title-align _<align>_
 Sets the alignment of the title.
+
+==== title-color _<color>_
+Sets the color of the title.
 
 ==== title-font _<font>_
 Sets the font of the title.
