@@ -71,6 +71,9 @@ on the next line.
 'body-align <align>' ::
     Sets the alignment of the main body area.
 
+'body-color <color>' ::
+    Sets the color of the main body area.
+
 'body-font <font>' ::
     Sets the font of the main body area.
 
@@ -81,6 +84,9 @@ on the next line.
 
 'title-align <align>' ::
     Sets the alignment of the title.
+
+'title-color <color>' ::
+    Sets the color of the title.
 
 'title-font <font>' ::
     Sets the font of the title.
